# rust-ad

./: Cargo.toml  README.md
consts/: Cargo.toml
consts/src/: lib.rs
core/: Cargo.toml
core-macros/: Cargo.toml
core-macros/src/: lib.rs
core/src/: derivatives.rs  dict.rs  lib.rs  traits.rs  utils.rs
core/src/derivatives/: f32.rs  f64.rs  forward.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  mod.rs  reverse.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
core/src/derivatives/forward/: f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
core/src/derivatives/reverse/: f32.rs  f64.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  misc.rs  mod.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
macros/: Cargo.toml
macros/src/: forward.rs  lib.rs  reverse.rs
src/: lib.rs  main.rs  test.rs  tests.rs  utils.rs
tests/: forward.rs  forward_general.rs  reverse.rs  reverse_general.rs
