[package]
name = "rust-ad"
version = "0.8.0"
edition = "2021"

description = "Rust Auto-Differentiation."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/rust-ad"
documentation = "https://docs.rs/rust-ad/"
readme = "README.md"
exclude = ["/src/main.rs","/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0.82", features=["full","extra-traits"] }
rust-ad-macros = { version = "0.8.0", path = "macros" }

# rust-ad-core-macros = { version = "0.8.0", path = "./core-macros" } # TEMP
# rust-ad-core = { version = "0.8.0", path = "./core" } # TEMP

[workspace]
members = ["./macros","./core","./core-macros","./consts"]