[package]
name = "rust-ad-core-macros"
version = "0.8.0"
edition = "2021"

description = "Rust Auto-Differentiation."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/rust-ad"
documentation = "https://docs.rs/rust-ad/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ad-consts = { version = "0.8.0", path = "../consts" }

[lib]
proc-macro = true