[package]
name = "rust-ad-core"
version = "0.7.2"
edition = "2021"

description = "Rust Auto-Differentiation."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/rust-ad"
documentation = "https://docs.rs/rust-ad/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0.82", features=["full","extra-traits"] }
lazy_static = "1.4.0"
rust-ad-core-macros = { version = "0.7.2", path = "../core-macros" }
quote = "1.0.10" # Just for ToTokens