[package]
name = "rust-ad-macros"
version = "0.2.1"
edition = "2021"

description = "Rust Auto-Differentiation."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/rust-ad"
documentation = "https://docs.rs/rust-ad/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version="1.0.82", features=["full","extra-traits"] }
quote = "1.0.10"
rust-ad-core = { version = "0.2.1", path = "../core" }
num = "0.4.0" # This crate doesn't require this, but the code it produces does.

[lib]
proc-macro = true